--- a/appsettings.json
+++ b/appsettings.json
@@ -30,7 +30,8 @@
         "Mode": "Production"
       },
       "ModelsBuilder": {
-        "ModelsMode": "SourceCodeAuto"
+        "ModelsMode": "SourceCodeAuto",
+        "ModelsDirectory": "~/umbraco/models"
       },
       "Security": {
         "AllowConcurrentLogins": false
