--- a/.gitignore
+++ b/.gitignore
@@ -482,3 +482,5 @@ umbraco-package-schema.json
 /wwwroot/media/
 /appsettings.json
 /appsettings.Development.json
+/appsettings.json
+/appsettings.Development.json
