--- a/uSync/v16/DataTypes/OnatrixSections.config
+++ b/uSync/v16/DataTypes/OnatrixSections.config
@@ -16,6 +16,9 @@
     },
     {
       "contentElementTypeKey": "7b1a1667-075f-4b2a-bc1c-f5d0c6c3dc3d"
+    },
+    {
+      "contentElementTypeKey": "89e580a2-bf7d-48bc-84dc-d7e6f69d4a42"
     }
   ]
 }]]></Config>
