Fix: restored Rich Text Editor and repaired topbar layout

--- a/uSync/v16/Content/about.config
+++ b/uSync/v16/Content/about.config
@@ -14,7 +14,15 @@
   </Info>
   <Properties>
     <pageTitle>
-      <Value><![CDATA[About Us]]></Value>
+      <Value><![CDATA[{
+  "blocks": {
+    "contentData": [],
+    "settingsData": [],
+    "expose": [],
+    "Layout": {}
+  },
+  "markup": "About Us"
+}]]></Value>
     </pageTitle>
     <sections>
       <Value><![CDATA[{
@@ -36,7 +44,7 @@
               "expose": [],
               "Layout": {}
             },
-            "markup": "\u003Ch3 style=\u0022text-align: center\u0022\u003E\u003Cstrong\u003E\u003Cspan style=\u0022white-space: pre-wrap;\u0022\u003EA team of professionals\u003C/span\u003E\u003Cbr\u003E\u003Cspan style=\u0022white-space: pre-wrap;\u0022\u003Ewith years of experience\u003C/span\u003E\u003C/strong\u003E\u003C/h3\u003E\u003Cp\u003E\u003C/p\u003E"
+            "markup": "\u003Ch3 class=\u0022text-rte-h3\u0022 style=\u0022text-align: center\u0022\u003E\u003Cstrong\u003EA team of professionals\u003Cbr\u003Ewith years of experience\u003C/strong\u003E\u003C/h3\u003E\u003Cp\u003E\u003C/p\u003E"
           }
         },
         {
@@ -44,7 +52,15 @@
           "culture": null,
           "editorAlias": null,
           "segment": null,
-          "value": "Our Expert"
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "Our Expert"
+          }
         },
         {
           "alias": "teamMemberList",
@@ -63,14 +79,30 @@
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "Brandon Newton"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "Brandon Newton"
+                    }
                   },
                   {
                     "alias": "teamMemberRole",
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "Financial Advisor at Onatrix"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "Financial Advisor at Onatrix"
+                    }
                   },
                   {
                     "alias": "teamMemberImage",
@@ -99,14 +131,30 @@
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "AJ Carter"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "AJ Carter"
+                    }
                   },
                   {
                     "alias": "teamMemberRole",
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "Financial Advisor at Onatrix"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "Financial Advisor at Onatrix"
+                    }
                   },
                   {
                     "alias": "teamMemberImage",
@@ -135,14 +183,30 @@
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "Aaron Lambert"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "Aaron Lambert"
+                    }
                   },
                   {
                     "alias": "teamMemberRole",
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "Business Specialist at Onatrix"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "Business Specialist at Onatrix"
+                    }
                   },
                   {
                     "alias": "teamMemberImage",
@@ -171,14 +235,30 @@
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "Tina Fox"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "Tina Fox"
+                    }
                   },
                   {
                     "alias": "teamMemberRole",
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "CEO \u0026 Founder at Onatrix"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "CEO \u0026 Founder at Onatrix"
+                    }
                   },
                   {
                     "alias": "teamMemberImage",
@@ -207,14 +287,30 @@
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "Brandon Kerr"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "Brandon Kerr"
+                    }
                   },
                   {
                     "alias": "teamMemberRole",
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": " CFO \u0026 Co-Founderat Onatrix"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": " CFO \u0026 Co-Founderat Onatrix"
+                    }
                   },
                   {
                     "alias": "teamMemberImage",
@@ -243,14 +339,30 @@
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "Miranda Dayton"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "Miranda Dayton"
+                    }
                   },
                   {
                     "alias": "teamMemberRole",
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "Head of HR at Onatrix"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "Head of HR at Onatrix"
+                    }
                   },
                   {
                     "alias": "teamMemberImage",
@@ -279,14 +391,30 @@
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "Kevin Gardner"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "Kevin Gardner"
+                    }
                   },
                   {
                     "alias": "teamMemberRole",
                     "culture": null,
                     "editorAlias": null,
                     "segment": null,
-                    "value": "Banking Advisor at Swedbank"
+                    "value": {
+                      "blocks": {
+                        "contentData": [],
+                        "settingsData": [],
+                        "expose": [],
+                        "Layout": {}
+                      },
+                      "markup": "Banking Advisor at Swedbank"
+                    }
                   },
                   {
                     "alias": "teamMemberImage",
