--- a/uSync/v16/ContentTypes/aboutcallbacksection.config
+++ b/uSync/v16/ContentTypes/aboutcallbacksection.config
@@ -27,28 +27,12 @@
       <Key>56915b6b-a99a-4179-886b-aea4ca79f04d</Key>
       <Name>Form Description</Name>
       <Alias>aboutCallbackFormDescription</Alias>
-      <Definition>0cc0eba1-9960-42c9-bf9b-60e150b429ae</Definition>
+      <Definition>d08d1a65-1f3d-4f17-8d9e-4328325e8283</Definition>
       <Type>Umbraco.TextBox</Type>
       <Mandatory>false</Mandatory>
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>2</SortOrder>
-      <Tab Alias="content">Content</Tab>
-      <Variations>Nothing</Variations>
-      <MandatoryMessage></MandatoryMessage>
-      <ValidationRegExpMessage></ValidationRegExpMessage>
-      <LabelOnTop>false</LabelOnTop>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>dace838d-b4f5-468a-ae2d-0f38cfd01458</Key>
-      <Name>Form Title</Name>
-      <Alias>aboutCallbackFormTitle</Alias>
-      <Definition>0cc0eba1-9960-42c9-bf9b-60e150b429ae</Definition>
-      <Type>Umbraco.TextBox</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
@@ -65,6 +49,22 @@
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+    <GenericProperty>
+      <Key>20eb58b6-d8af-4465-bad2-da9144e2390f</Key>
+      <Name>Form Title</Name>
+      <Alias>formTitle</Alias>
+      <Definition>d08d1a65-1f3d-4f17-8d9e-4328325e8283</Definition>
+      <Type>Umbraco.TextBox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
       <Tab Alias="content">Content</Tab>
       <Variations>Nothing</Variations>
       <MandatoryMessage></MandatoryMessage>
