--- a/uSync/v16/DataTypes/RichtextEditor.config
+++ b/uSync/v16/DataTypes/RichtextEditor.config
@@ -8,15 +8,19 @@
   <Config><![CDATA[{
   "extensions": [
     "Umb.Tiptap.Embed",
-    "Umb.Tiptap.Link",
     "Umb.Tiptap.Figure",
     "Umb.Tiptap.Image",
+    "Umb.Tiptap.Link",
+    "Umb.Tiptap.MediaUpload",
+    "Umb.Tiptap.RichTextEssentials",
     "Umb.Tiptap.Subscript",
     "Umb.Tiptap.Superscript",
     "Umb.Tiptap.Table",
-    "Umb.Tiptap.Underline",
     "Umb.Tiptap.TextAlign",
-    "Umb.Tiptap.MediaUpload"
+    "Umb.Tiptap.TextDirection",
+    "Umb.Tiptap.TextIndent",
+    "Umb.Tiptap.Underline",
+    "Umb.Tiptap.WordCount"
   ],
   "maxImageSize": 500,
   "overlaySize": "medium",
@@ -26,8 +30,10 @@
   "toolbar": [
     [
       [
-        "Onatrix.Tiptap.StyleMenu",
         "Onatrix.Tiptap.BrandColors"
+      ],
+      [
+        "Onatrix.Tiptap.StyleMenu"
       ],
       [
         "Umb.Tiptap.Toolbar.ClearFormatting"
@@ -36,6 +42,7 @@
         "Umb.Tiptap.Toolbar.SourceEditor"
       ],
       [
+        "Umb.Tiptap.Toolbar.Bold",
         "Umb.Tiptap.Toolbar.Italic",
         "Umb.Tiptap.Toolbar.Underline"
       ],
@@ -45,12 +52,20 @@
         "Umb.Tiptap.Toolbar.TextAlignRight"
       ],
       [
+        "Umb.Tiptap.Toolbar.BulletList",
+        "Umb.Tiptap.Toolbar.OrderedList"
+      ],
+      [
+        "Umb.Tiptap.Toolbar.Blockquote",
+        "Umb.Tiptap.Toolbar.HorizontalRule"
+      ],
+      [
         "Umb.Tiptap.Toolbar.Link",
-        "Umb.Tiptap.Toolbar.EmbeddedMedia",
         "Umb.Tiptap.Toolbar.Unlink"
       ],
       [
-        "Umb.Tiptap.Toolbar.MediaPicker"
+        "Umb.Tiptap.Toolbar.MediaPicker",
+        "Umb.Tiptap.Toolbar.EmbeddedMedia"
       ]
     ]
   ]
