--- a/uSync/v16/DataTypes/Textstring.config
+++ b/uSync/v16/DataTypes/Textstring.config
@@ -2,8 +2,72 @@
 <DataType Key="0cc0eba1-9960-42c9-bf9b-60e150b429ae" Alias="Textstring" Level="1">
   <Info>
     <Name>Textstring</Name>
-    <EditorAlias>Umbraco.TextBox</EditorAlias>
-    <EditorUIAlias>Umb.PropertyEditorUi.TextBox</EditorUIAlias>
+    <EditorAlias>Umbraco.RichText</EditorAlias>
+    <EditorUIAlias>Umb.PropertyEditorUi.Tiptap</EditorUIAlias>
   </Info>
-  <Config><![CDATA[{}]]></Config>
+  <Config><![CDATA[{
+  "extensions": [
+    "Umb.Tiptap.Embed",
+    "Umb.Tiptap.Figure",
+    "Umb.Tiptap.Image",
+    "Umb.Tiptap.Link",
+    "Umb.Tiptap.MediaUpload",
+    "Umb.Tiptap.RichTextEssentials",
+    "Umb.Tiptap.Subscript",
+    "Umb.Tiptap.Superscript",
+    "Umb.Tiptap.Table",
+    "Umb.Tiptap.TextAlign",
+    "Umb.Tiptap.TextDirection",
+    "Umb.Tiptap.TextIndent",
+    "Umb.Tiptap.Underline",
+    "Umb.Tiptap.WordCount"
+  ],
+  "maxImageSize": 500,
+  "overlaySize": "medium",
+  "stylesheets": [
+    "/output.css"
+  ],
+  "toolbar": [
+    [
+      [
+        "Onatrix.Tiptap.BrandColors"
+      ],
+      [
+        "Onatrix.Tiptap.StyleMenu"
+      ],
+      [
+        "Umb.Tiptap.Toolbar.Heading3"
+      ],
+      [
+        "Umb.Tiptap.Toolbar.SourceEditor"
+      ],
+      [
+        "Umb.Tiptap.Toolbar.Bold",
+        "Umb.Tiptap.Toolbar.Italic",
+        "Umb.Tiptap.Toolbar.Underline"
+      ],
+      [
+        "Umb.Tiptap.Toolbar.TextAlignLeft",
+        "Umb.Tiptap.Toolbar.TextAlignCenter",
+        "Umb.Tiptap.Toolbar.TextAlignRight"
+      ],
+      [
+        "Umb.Tiptap.Toolbar.BulletList",
+        "Umb.Tiptap.Toolbar.OrderedList"
+      ],
+      [
+        "Umb.Tiptap.Toolbar.Blockquote",
+        "Umb.Tiptap.Toolbar.HorizontalRule"
+      ],
+      [
+        "Umb.Tiptap.Toolbar.Link",
+        "Umb.Tiptap.Toolbar.Unlink"
+      ],
+      [
+        "Umb.Tiptap.Toolbar.MediaPicker",
+        "Umb.Tiptap.Toolbar.EmbeddedMedia"
+      ]
+    ]
+  ]
+}]]></Config>
 </DataType>
