form functionality added

--- a/uSync/v16/Content/onatrix.config
+++ b/uSync/v16/Content/onatrix.config
@@ -181,6 +181,20 @@
           "value": "1"
         }
       ]
+    },
+    {
+      "contentTypeKey": "3e2facb4-9958-4a87-bd50-2f5e4ad7af8d",
+      "key": "989e817f-e5a7-44fb-840b-f3c7c3d2ab00",
+      "udi": null,
+      "values": [
+        {
+          "alias": "callbackRequestOptions",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": "Financial consulting\nBusiness\nTax planning"
+        }
+      ]
     }
   ],
   "expose": [
@@ -211,7 +225,7 @@
       {
         "contentKey": "f6cadf3b-c543-49a3-9a08-92e81ac23d4b",
         "contentUdi": null,
-        "settingsKey": null,
+        "settingsKey": "989e817f-e5a7-44fb-840b-f3c7c3d2ab00",
         "settingsUdi": null
       },
       {
