--- a/uSync/v16/ContentTypes/aboutcallbacksettings.config
+++ b/uSync/v16/ContentTypes/aboutcallbacksettings.config
@@ -20,6 +20,31 @@
     <AllowedTemplates />
   </Info>
   <Structure />
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>54419757-57a0-4a9c-8c23-16245405f3c0</Key>
+      <Name>Options</Name>
+      <Alias>callbackRequestOptions</Alias>
+      <Definition>e752667f-db16-41fd-89cc-3f8d96b83da5</Definition>
+      <Type>Umbraco.MultipleTextstring</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab Alias="formSettings">Form Settings</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Key>b380fd6b-bb3e-4a9b-8b56-0c27921bd343</Key>
+      <Caption>Form Settings</Caption>
+      <Alias>formSettings</Alias>
+      <Type>Group</Type>
+      <SortOrder>0</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
