--- a/uSync/v16/DataTypes/OnatrixSections.config
+++ b/uSync/v16/DataTypes/OnatrixSections.config
@@ -18,7 +18,8 @@
       "contentElementTypeKey": "7b1a1667-075f-4b2a-bc1c-f5d0c6c3dc3d"
     },
     {
-      "contentElementTypeKey": "89e580a2-bf7d-48bc-84dc-d7e6f69d4a42"
+      "contentElementTypeKey": "89e580a2-bf7d-48bc-84dc-d7e6f69d4a42",
+      "settingsElementTypeKey": "3e2facb4-9958-4a87-bd50-2f5e4ad7af8d"
     }
   ]
 }]]></Config>
