Add Why Us section

--- a/uSync/v16/Content/onatrix.config
+++ b/uSync/v16/Content/onatrix.config
@@ -33,7 +33,7 @@
               "expose": [],
               "Layout": {}
             },
-            "markup": "We bring success to you"
+            "markup": "\u003Cp class=\u0022text-rte-xl font-bold\u0022\u003E\u003Cspan class=\u0022text-primary\u0022\u003EWe bring success to you\u003C/span\u003E\u003C/p\u003E"
           }
         },
         {
@@ -100,7 +100,7 @@
               "expose": [],
               "Layout": {}
             },
-            "markup": "Our Services"
+            "markup": "\u003Cp class=\u0022text-rte-sm font-bold\u0022\u003E\u003Cspan class=\u0022text-secondary\u0022\u003EOur Services\u003C/span\u003E\u003C/p\u003E"
           }
         },
         {
@@ -115,7 +115,7 @@
               "expose": [],
               "Layout": {}
             },
-            "markup": "\u003Ch3 class=\u0022text-rte-h3\u0022 style=\u0022text-align: center\u0022\u003EWe Provide The Solutions \u003Cbr\u003ETo Grow Your Business Faster\u003C/h3\u003E\u003Cp\u003E\u003C/p\u003E"
+            "markup": "\u003Cp class=\u0022text-rte-lg font-regular\u0022 style=\u0022text-align: center\u0022\u003E\u003Cstrong\u003E\u003Cspan class=\u0022text-primary\u0022\u003EWe Provide The Solutions \u003Cbr\u003ETo Grow Your Business Faster\u003C/span\u003E\u003C/strong\u003E\u003C/p\u003E\u003Cp\u003E\u003C/p\u003E"
           }
         }
       ]
@@ -153,6 +153,73 @@
           "editorAlias": null,
           "segment": null,
           "value": "Request a call back"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "f8abd1b1-87c2-4b0d-877c-3cd8efffaaac",
+      "key": "b11efec6-8c33-4b56-8aef-ad734db58f7a",
+      "udi": null,
+      "values": [
+        {
+          "alias": "whyUsTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-lg font-regular\u0022 style=\u0022text-align: center\u0022\u003E\u003Cstrong\u003E\u003Cspan class=\u0022text-primary\u0022\u003EWe are trusted by more than\u003C/span\u003E\u003Cbr\u003E\u003Cspan class=\u0022text-secondary\u0022\u003E4.000\u002B clients\u003C/span\u003E\u003C/strong\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-lg font-light\u0022 style=\u0022text-align: center\u0022\u003E\u003C/p\u003E"
+          }
+        },
+        {
+          "alias": "whyUsDescription",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-sm font-light\u0022 style=\u0022text-align: center\u0022\u003ELorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis molestie nulla. Nam accumsanporttitor arcu,ac tincidunt lectus tincidunt sed.\u003C/p\u003E"
+          }
+        },
+        {
+          "alias": "whyUsPicture",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "85bc03d2-a105-4d7f-8886-4c1d726ee081",
+              "mediaKey": "d9d34725-f644-4e24-856c-c9b63a07dbd6",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "readOurStoryButton",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "name": "Read our story",
+              "target": null,
+              "udi": "umb://document/9c45152da9604789b306e937e0128741",
+              "url": null,
+              "queryString": null
+            }
+          ]
         }
       ]
     }
@@ -212,6 +279,11 @@
       "contentKey": "f6cadf3b-c543-49a3-9a08-92e81ac23d4b",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "b11efec6-8c33-4b56-8aef-ad734db58f7a",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
@@ -232,6 +304,12 @@
         "contentKey": "77b662e8-d12a-474f-992c-fdb2d98fd748",
         "contentUdi": null,
         "settingsKey": "1c9450c4-306e-41fa-9c18-dfb06847ea6d",
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "b11efec6-8c33-4b56-8aef-ad734db58f7a",
+        "contentUdi": null,
+        "settingsKey": null,
         "settingsUdi": null
       }
     ]
