--- a/uSync/v16/DataTypes/OnatrixSections.config
+++ b/uSync/v16/DataTypes/OnatrixSections.config
@@ -20,6 +20,9 @@
     {
       "contentElementTypeKey": "89e580a2-bf7d-48bc-84dc-d7e6f69d4a42",
       "settingsElementTypeKey": "3e2facb4-9958-4a87-bd50-2f5e4ad7af8d"
+    },
+    {
+      "contentElementTypeKey": "f8abd1b1-87c2-4b0d-877c-3cd8efffaaac"
     }
   ]
 }]]></Config>
