--- a/Onatrix_Umbraco.csproj
+++ b/Onatrix_Umbraco.csproj
@@ -22,7 +22,7 @@
 
   <ItemGroup>
     <Folder Include="App_Plugins\OmatrixRte\" />
-    <Folder Include="Views\Partials\blocklist\Components\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
   <PropertyGroup>
