Add success stories section

--- a/uSync/v16/Content/onatrix.config
+++ b/uSync/v16/Content/onatrix.config
@@ -222,6 +222,103 @@
           ]
         }
       ]
+    },
+    {
+      "contentTypeKey": "eddee8e6-c56a-4e47-9f82-7daa9c119397",
+      "key": "d6745f92-be45-4f75-98d1-e61133cc6b57",
+      "udi": null,
+      "values": [
+        {
+          "alias": "successStoriesSectionLabel",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-xs font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-secondary\u0022\u003ESUCCESS STORIES\u003C/span\u003E\u003C/p\u003E"
+          }
+        },
+        {
+          "alias": "successStoriesSectionTitle",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-neutral\u0022\u003ESuccess story\u003C/span\u003E\u003C/p\u003E"
+          }
+        },
+        {
+          "alias": "successStoriesSectionCustomers",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-xl font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-secondary\u0022\u003E689\u003C/span\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-md font-regular\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-neutral\u0022\u003EMore than 100 customers has been served\u003C/span\u003E\u003C/p\u003E"
+          }
+        },
+        {
+          "alias": "successStoriesSectionProjects",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-xl font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-secondary\u0022\u003E370\u003C/span\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-md font-regular\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-neutral\u0022\u003EMore than 370 projects has been completed\u003C/span\u003E\u003C/p\u003E"
+          }
+        },
+        {
+          "alias": "successStoriesSectionBranches",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-xl font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-secondary\u0022\u003E125\u003C/span\u003E\u003C/p\u003E\u003Cp class=\u0022text-rte-md font-regular\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-neutral\u0022\u003EMore than 125 branches has been established in Europe and America\u003C/span\u003E\u003C/p\u003E"
+          }
+        },
+        {
+          "alias": "successStoriesSectionImage",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "685beae2-7278-4396-aabf-b823ef3030e5",
+              "mediaKey": "27f86e5c-1427-4511-b5dc-b552978baccf",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        }
+      ]
     }
   ],
   "settingsData": [
@@ -284,6 +381,11 @@
       "contentKey": "b11efec6-8c33-4b56-8aef-ad734db58f7a",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "d6745f92-be45-4f75-98d1-e61133cc6b57",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
@@ -308,6 +410,12 @@
       },
       {
         "contentKey": "b11efec6-8c33-4b56-8aef-ad734db58f7a",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "d6745f92-be45-4f75-98d1-e61133cc6b57",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
