--- a/uSync/v16/DataTypes/OnatrixSections.config
+++ b/uSync/v16/DataTypes/OnatrixSections.config
@@ -23,6 +23,12 @@
     },
     {
       "contentElementTypeKey": "f8abd1b1-87c2-4b0d-877c-3cd8efffaaac"
+    },
+    {
+      "contentElementTypeKey": "eddee8e6-c56a-4e47-9f82-7daa9c119397"
+    },
+    {
+      "contentElementTypeKey": "0e0af2f4-d5ed-4793-aaef-b859e886bda9"
     }
   ]
 }]]></Config>
