--- a/uSync/v16/Content/about.config
+++ b/uSync/v16/Content/about.config
@@ -21,7 +21,7 @@
     "expose": [],
     "Layout": {}
   },
-  "markup": "About Us"
+  "markup": "\u003Cp\u003EAbout Us\u003C/p\u003E"
 }]]></Value>
     </pageTitle>
     <sections>
@@ -44,7 +44,7 @@
               "expose": [],
               "Layout": {}
             },
-            "markup": "\u003Ch3 class=\u0022text-rte-h3\u0022 style=\u0022text-align: center\u0022\u003E\u003Cstrong\u003EA team of professionals\u003Cbr\u003Ewith years of experience\u003C/strong\u003E\u003C/h3\u003E\u003Cp\u003E\u003C/p\u003E"
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cstrong\u003EA team of professionals\u003Cbr\u003Ewith years of experience\u003C/strong\u003E\u003C/p\u003E\u003Cp\u003E\u003C/p\u003E"
           }
         },
         {
@@ -59,7 +59,7 @@
               "expose": [],
               "Layout": {}
             },
-            "markup": "Our Expert"
+            "markup": "\u003Cp class=\u0022text-rte-xs font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-secondary\u0022\u003EOur Expert\u003C/span\u003E\u003C/p\u003E"
           }
         },
         {
