--- a/uSync/v16/Content/services.config
+++ b/uSync/v16/Content/services.config
@@ -14,7 +14,15 @@
   </Info>
   <Properties>
     <pageTitle>
-      <Value><![CDATA[Our Services]]></Value>
+      <Value><![CDATA[{
+  "blocks": {
+    "contentData": [],
+    "settingsData": [],
+    "expose": [],
+    "Layout": {}
+  },
+  "markup": "Our Services"
+}]]></Value>
     </pageTitle>
     <sections>
       <Value><![CDATA[{
@@ -29,7 +37,15 @@
           "culture": null,
           "editorAlias": null,
           "segment": null,
-          "value": "Our Services"
+          "value": {
+            "blocks": {
+              "contentData": [],
+              "settingsData": [],
+              "expose": [],
+              "Layout": {}
+            },
+            "markup": "\u003Cp class=\u0022text-rte-xs font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cspan class=\u0022text-secondary\u0022\u003EOur Services\u003C/span\u003E\u003C/p\u003E"
+          }
         },
         {
           "alias": "serviceTitle",
@@ -43,7 +59,7 @@
               "expose": [],
               "Layout": {}
             },
-            "markup": "\u003Ch3 style=\u0022text-align: center\u0022\u003E\u003Cstrong\u003E\u003Cspan style=\u0022white-space: pre-wrap;\u0022\u003EWe Provide The Solutions \u003C/span\u003E\u003Cbr\u003E\u003Cspan style=\u0022white-space: pre-wrap;\u0022\u003ETo Grow Your Business Faster\u003C/span\u003E\u003C/strong\u003E\u003C/h3\u003E\u003Cp\u003E\u003C/p\u003E"
+            "markup": "\u003Cp class=\u0022text-rte-lg font-bold\u0022 style=\u0022text-align: center\u0022\u003E\u003Cstrong\u003E\u003Cspan class=\u0022text-primary\u0022 style=\u0022white-space: pre-wrap;\u0022\u003EWe Provide The Solutions \u003C/span\u003E\u003Cspan class=\u0022text-primary\u0022\u003E\u003Cbr\u003E\u003C/span\u003E\u003Cspan class=\u0022text-primary\u0022 style=\u0022white-space: pre-wrap;\u0022\u003ETo Grow Your Business Faster\u003C/span\u003E\u003C/strong\u003E\u003C/p\u003E\u003Cp\u003E\u003C/p\u003E"
           }
         }
       ]
