Add Partners Section block

--- a/uSync/v16/Content/onatrix.config
+++ b/uSync/v16/Content/onatrix.config
@@ -319,6 +319,103 @@
           ]
         }
       ]
+    },
+    {
+      "contentTypeKey": "0e0af2f4-d5ed-4793-aaef-b859e886bda9",
+      "key": "3891b905-d97e-4b08-b66f-443162a85c3c",
+      "udi": null,
+      "values": [
+        {
+          "alias": "freedombird",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "366e0b6c-f719-4854-85f0-c2654ab0774f",
+              "mediaKey": "f7c83fb1-267f-4ceb-9b14-c53c8df6f96a",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "identity",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "2c4cfa44-149a-49e5-bf75-48743c42aec6",
+              "mediaKey": "301dd685-84db-4971-8339-dd5be4afdc0b",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "natural",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "c01e9ab2-0a4b-493a-9f32-996af2390fad",
+              "mediaKey": "85c40f27-0ad3-4053-bd2b-a908b6aaf672",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "simpleleaf",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "5120497d-a6fe-4f6b-b795-6da4579e661e",
+              "mediaKey": "c120c9e5-2183-4497-adc5-d9c2feccc128",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "globe",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "7196097c-dc36-4dc5-910a-58d225f104a8",
+              "mediaKey": "15669629-d937-4163-889b-ace27b234f71",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        },
+        {
+          "alias": "fossilGroup",
+          "culture": null,
+          "editorAlias": null,
+          "segment": null,
+          "value": [
+            {
+              "key": "32723d5a-bc7d-4d40-87ac-dcbee7d03956",
+              "mediaKey": "069c652d-6e4d-4640-a656-6a43ac924d7d",
+              "mediaTypeAlias": "",
+              "crops": [],
+              "focalPoint": null
+            }
+          ]
+        }
+      ]
     }
   ],
   "settingsData": [
@@ -386,6 +483,11 @@
       "contentKey": "d6745f92-be45-4f75-98d1-e61133cc6b57",
       "culture": null,
       "segment": null
+    },
+    {
+      "contentKey": "3891b905-d97e-4b08-b66f-443162a85c3c",
+      "culture": null,
+      "segment": null
     }
   ],
   "Layout": {
@@ -416,6 +518,12 @@
       },
       {
         "contentKey": "d6745f92-be45-4f75-98d1-e61133cc6b57",
+        "contentUdi": null,
+        "settingsKey": null,
+        "settingsUdi": null
+      },
+      {
+        "contentKey": "3891b905-d97e-4b08-b66f-443162a85c3c",
         "contentUdi": null,
         "settingsKey": null,
         "settingsUdi": null
