--- a/uSync/v16/Content/onatrix.config
+++ b/uSync/v16/Content/onatrix.config
@@ -334,7 +334,7 @@
             {
               "key": "366e0b6c-f719-4854-85f0-c2654ab0774f",
               "mediaKey": "f7c83fb1-267f-4ceb-9b14-c53c8df6f96a",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
               "crops": [],
               "focalPoint": null
             }
@@ -349,7 +349,7 @@
             {
               "key": "2c4cfa44-149a-49e5-bf75-48743c42aec6",
               "mediaKey": "301dd685-84db-4971-8339-dd5be4afdc0b",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
               "crops": [],
               "focalPoint": null
             }
@@ -364,7 +364,7 @@
             {
               "key": "c01e9ab2-0a4b-493a-9f32-996af2390fad",
               "mediaKey": "85c40f27-0ad3-4053-bd2b-a908b6aaf672",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
               "crops": [],
               "focalPoint": null
             }
@@ -379,7 +379,7 @@
             {
               "key": "5120497d-a6fe-4f6b-b795-6da4579e661e",
               "mediaKey": "c120c9e5-2183-4497-adc5-d9c2feccc128",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
               "crops": [],
               "focalPoint": null
             }
@@ -394,7 +394,7 @@
             {
               "key": "7196097c-dc36-4dc5-910a-58d225f104a8",
               "mediaKey": "15669629-d937-4163-889b-ace27b234f71",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
               "crops": [],
               "focalPoint": null
             }
@@ -409,7 +409,7 @@
             {
               "key": "32723d5a-bc7d-4d40-87ac-dcbee7d03956",
               "mediaKey": "069c652d-6e4d-4640-a656-6a43ac924d7d",
-              "mediaTypeAlias": "",
+              "mediaTypeAlias": "umbracoMediaVectorGraphics",
               "crops": [],
               "focalPoint": null
             }
